2002-12-16  Bruno Haible  <bruno@clisp.org>

	* copy-file.c: Include <sys/utime.h> if <utime.h> doesn't exist.
	Needed for mingw32.
	Reported by Steven Edwards <Steven_Ed4153@yahoo.com>.

2002-11-22  Bruno Haible  <bruno@clisp.org>

	* safe-write.h: New file, from current gnulib version.
	* safe-write.c: New file, from current gnulib version.
	* full-write.h: Update from current gnulib version.
	* full-write.c: Update from current gnulib version.
	* copy-file.c (copy_file): Change test of full_write return value.
	* Makefile.am (libgettextlib_la_SOURCES): Add safe-write.h,
	safe-write.c.

	* safe-read.h: Update from current gnulib version.
	* safe-read.c: Update from current gnulib version.

	* argmatch.h: Update from current gnulib version.
	* argmatch.c: Update from current gnulib version, with simplifications.

2002-11-19  Bruno Haible  <bruno@clisp.org>

	* pathmax.h: Update from current gnulib version.
	* obstack.h: Update from current gnulib version.
	* obstack.c: Update from current gnulib version.

2002-11-06  Bruno Haible  <bruno@clisp.org>

	* gcd.h (gcd): Change argument type to 'unsigned long'.
	* gcd.c (gcd): Likewise.

2002-11-15  Bruno Haible  <bruno@clisp.org>

	* alloca.c: Update from current gnulib version.
	* memset.c: Update from current gnulib version.

2002-11-13  Bruno Haible  <bruno@clisp.org>

	Assume ANSI C.
	* libstdarg.h: Remove file.
	* Makefile.am (LIBADD_SOURCE): Remove libstdarg.h.
	* addext.c (addext): Use ANSI C function declarations.
	* alloca.c (alloca): Likewise.
	* argmatch.h (PARAMS): Remove macro.
	(argmatch, argmatch_exit_fn, argmatch_invalid, argmatch_valid,
	__xargmatch_internal, argmatch_to_argument): Use ANSI C function
	declarations.
	* argmatch.c (argmatch, argmatch_invalid, argmatch_valid,
	__xargmatch_internal, argmatch_to_argument): Likewise.
	* backupfile.h (PARAMS): Remove macro.
	(find_backup_file_name, get_version, xget_version, addext): Use ANSI C
	function declarations.