@@ -17,7 +17,9 @@
 
 #include <stddef.h>
 
+#define SAFE_READ_ERROR ((size_t) -1)
+
 /* Read up to COUNT bytes at BUF from descriptor FD, retrying if interrupted.
-   Return the actual number of bytes read, zero for EOF, or (size_t) -1
-   for an error.  */
+   Return the actual number of bytes read, zero for EOF, or SAFE_READ_ERROR
+   upon error.  */
 extern size_t safe_read (int fd, void *buf, size_t count);
