@@ -1,3 +1,12 @@
+2003-01-08  Bruno Haible  <bruno@clisp.org>
+
+	* safe-read.h: Update from current gnulib version.
+	* safe-read.c: Update from current gnulib version.
+	* safe-write.h: Update from current gnulib version.
+	* safe-write.c: Update from current gnulib version.
+	* full-write.h: Update from current gnulib version.
+	* full-write.c: Update from current gnulib version.
+
 2002-12-16  Bruno Haible  <bruno@clisp.org>
 
 	* copy-file.c: Include <sys/utime.h> if <utime.h> doesn't exist.
